--- a/Vue/Exercise1/package.json
+++ b/Vue/Exercise1/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.4",
+    "font-awesome": "^4.7.0",
     "router": "^1.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
