--- a/Vue/Exercise1/package.json
+++ b/Vue/Exercise1/package.json
@@ -14,7 +14,7 @@
     "font-awesome": "^4.7.0",
     "router": "^1.3.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6",
+    "vue-router": "^3.2.0",
     "vuejs": "^3.0.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
@@ -22,14 +22,15 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-router": "^4.3.1",
-    "@vue/cli-plugin-vuex": "^4.3.1",
+    "@vue/cli-plugin-router": "^4.4.1",
+    "@vue/cli-plugin-vuex": "^4.4.1",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-store": "0.0.7",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
